# debs2019

./: .gitignore  README.md
paper/: architecture.aux  architecture.tex  architecture2.tex  conclusion.aux  conclusion.tex  data.tex  evaluation.aux  evaluation.tex  main.tex  refrences.bib  relatedWork.tex  sample-sigconf.aux  sample-sigconf.bbl
paper/images/: DataProcessingPipleline.odg  Sector_Image_Idea_GMM.R  data_overview.py  evaluation2.R  one_to_one.R
paper/scripts/: one_to_one.py  results.txt
presentation/: MainTop.tex  presentation-DEBS2019.tex  references.bib
presentation/images/: Sector_Image_Idea_GMM.R  one_to_one.R  projection-visuals.py  sector-visual.py
src/client-cpp/: CMakeLists.txt  Dockerfile.client  docker-compose.yml
src/client-cpp/client_app/: Client.cc  Client.h  main.cc
src/client-cpp/dataset/: .gitignore  download.sh
src/notebooks/: 2_D_CNN.ipynb  AnotherProject.ipynb  Clustering_theta_phi_r.ipynb  JustTestsOfDifferentThings.ipynb  Klaviyo_Data_Science_Assessment_Ashwin_Pillai.ipynb  Object-Segmentation-Clustering-DBSCAN-Experiments-2.ipynb  Object-Segmentation-Clustering-DBSCAN-Experiments-3.ipynb  Object-Segmentation-Clustering-DBSCAN-Experiments.ipynb  Object-Segmentation-Clustering-DBSCAN-with-Dask.ipynb  Object-Segmentation-Clustering-DBSCAN-with-Different-Density.ipynb  Object-Segmentation-Clustering-DBSCAN.ipynb  Object-Segmentation-Clustering-Meanshift.ipynb  Object-Segmentation-Clustering-Minibatch-Kmeans.ipynb  Object-Segmentation-idea-2.ipynb  Object-Segmentation-idea-with-View-angles.ipynb  Test-2.ipynb  Test3.ipynb  (+5 more)
(+68 files in other folders)
